src/styles/styles.css
#main {
    min-height: 100vh;
}

.lightBackground {
    background-color: #FAF7F4;
}

#trackerTitle {
    padding-top: 1rem;
    color: #B32800;
    font-size: 1.5rem;
    font-weight: bold;
    font-family: Papyrus, Fantasy;
}

.orange {
    color: #E9A200;
}

.yellowBox {
    border: 2px solid #FBDD00;
    max-width: 70vw;
    border-radius: 10px;
    padding: 1rem;
    margin: 2rem auto;
}

.font1 {
    font-size: 2rem;
    font-weight: bold;
}

.taskItem {
    /* justify-content: space-between; */
    padding: 0.3rem;
}

.justifySpaceBetween {
    justify-content: space-between;
}

.checkBox {
    margin-right: 1rem;
    accent-color: #E9A200;
}

.flexBox {
    display: flex;
}

.flexColumn {
    flex-direction: column;
}

.flexRow {
    flex-direction: row;
}

.flexJustifyCenter {
    justify-content: center;
}

.flexAlignCenter{
    align-items: baseline;
    border-bottom: 1px dotted #E9A200;
}

.centerMargin {
    margin: auto;
}

.centerText {
    text-align: center;
}

.timerButton {
    margin: 0 0.5rem;
    padding: 0.5rem;
    border: 1px solid #FBDD00;
    border-radius: 3px;
}

.brown {
    color: #3F1300;
}

#taskName {
    border: none;
    max-width: 60vw;
    min-height: 5vh;
    text-wrap: wrap;
}

#taskList {
    max-height: 40vh;
    max-width: 100vw;
    overflow: scroll;
    padding: 0 0.9rem;
    overflow: scroll;
}

#bottom {
    position: absolute;
    bottom: 0;
    padding: 0.6rem;
    width: 100vw;
    background-color: #f1e8df;
}

#taskInput {
    width: 80wv;
}

#newTaskInput {
    height: 5vh;
    width: 70vw;
    overflow: auto;
    border: 1px solid black;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
}

#newCycleInput {
    width: 10vw;
    height: 5vh;
    margin-left: 0.1rem;
    border: 1px solid black;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
}

#newTaskButton {
    width: 2rem;
    height: 2rem;
    border-radius: 2rem;
    border: 1px solid #3F1300;
    background-color: white;
    padding-bottom: 0.25rem;
    font-size: 1.4rem;
    margin-left: 0.5rem;
}

.details {
    display: inline-block;
    width: 14vw;
}

.centerAlign {
    text-align: center;
}
.hoverItem:hover {
    color: #E9A200;
}

.timerButton:hover {
    border: 1px solid black;
}

#colName {
    /* border: 1px solid purple; */
    padding: 0 0.9rem;
}

.columns {
    font-size: 0.8rem;
}

.smallCol {
    text-align: center;
}

#colDescription {
    width: 63vw;
    /* border: 1px solid forestgreen; */
}

#columnLeft {
    margin: auto;
    /* border: 1px solid red; */
}

